<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_principal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/sin_fondo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/title_principal"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/sub_title_principal"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_correo"
        android:layout_width="315dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:contextClickable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ico_correo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/btn_ingresar_correo"
                android:textColor="@color/black" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_facebook"
        android:layout_width="315dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:contextClickable="true"
        app:cardBackgroundColor="@color/background_facebook"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ico_facebook" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/btn_ingresar_correo"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_gmail"
        android:layout_width="315dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:contextClickable="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ico_gmail" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/btn_ingresar_correo"
                android:textColor="@color/black" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_cuenta"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/fondo_transparent_linea"
            android:text="@string/btn_sin_cuenta"
            android:textAllCaps="false"
            android:textSize="18sp" />


    </LinearLayout>


</LinearLayout>